<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeamActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:contentPadding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivTImage"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/btn_dialog" />

            <TextView
                android:id="@+id/tvTName"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginStart="20dp"
                android:text="TextView"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/ivTImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivTImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvTTeamSubtitle"
                app:layout_constraintStart_toStartOf="@+id/tvTName"
                app:layout_constraintTop_toBottomOf="@+id/tvTName" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/tvTDescriptionTitle"
                app:layout_constraintBottom_toTopOf="@+id/tvTDescription"
                app:layout_constraintStart_toStartOf="@+id/tvTDescription" />

            <TextView
                android:id="@+id/tvTDescription"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginTop="45dp"
                android:text="TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivTImage" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/tvTRosterTitle"
                app:layout_constraintBottom_toTopOf="@+id/tvTRoster"
                app:layout_constraintStart_toStartOf="@+id/tvTRoster" />

            <TextView
                android:id="@+id/tvTRoster"
                android:layout_width="300dp"
                android:layout_height="25dp"
                android:layout_marginTop="45dp"
                android:text="TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTDescription" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="@+id/tvTRoster"
                app:layout_constraintStart_toStartOf="@+id/tvTRoster"
                app:layout_constraintTop_toBottomOf="@+id/tvTRoster" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="TextView"
                app:layout_constraintBottom_toTopOf="@+id/recyclerView3"
                app:layout_constraintStart_toStartOf="@+id/recyclerView3" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView3"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="45dp"
                app:layout_constraintEnd_toEndOf="@+id/recyclerView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/recyclerView"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintAdmin"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/tvTAdmin"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="20dp"
                    android:text="TextView"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivTAdmin"
                    app:layout_constraintTop_toTopOf="@+id/ivTAdmin" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/tvTAdminTitle"
                    app:layout_constraintBottom_toTopOf="@+id/ivTAdmin"
                    app:layout_constraintStart_toStartOf="@+id/ivTAdmin" />

                <ImageView
                    android:id="@+id/ivTAdmin"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="25dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@android:drawable/btn_dialog" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btnPEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Button"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/tvTRoster"
                app:layout_constraintTop_toBottomOf="@+id/tvTRoster" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="com.example.proyectofinalmovil.fragments.MenuFragment"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>